updated decorated log for git

--- a/git/gitconfig.symlink.example
+++ b/git/gitconfig.symlink.example
@@ -15,7 +15,7 @@
         wtf     = !$ZSH/bin/git-wtf
         rank-contributers = !$ZSH/bin/git-rank-contributers
         count   = !git shortlog -sn
-        history = log --graph --pretty=format:'%C(yellow)%h%C(cyan)%d%Creset %s %C(white)- %an, %ar%Creset' stash-list = stash list --pretty=format:'%Cblue%gd%Cred: %C(yellow)%s'q
+        lg      = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 [color]
         diff = auto
         status = auto
