--- a/git/gitconfig.symlink.example
+++ b/git/gitconfig.symlink.example
@@ -38,3 +38,7 @@
         #
         # Setting to git 2.0 default to surpress warning message
         default = simple
+[diff]
+        tool = vimdiff
+[merge]
+        tool = vimdiff
